# MBU_DLP_GoogleWorkspace_Pull_Alerts

./: README.md  main.py  pyproject.toml
.github/workflows/: Linting.yml  ci.yml  codeql-analysis.yml  test.yml
robot_framework/: config.py  process.py
robot_framework/google/: get_and_store_alerts.py
